text align fix for all text

--- a/serviceDetails/ProductsandAccelerators.css
+++ b/serviceDetails/ProductsandAccelerators.css
@@ -131,9 +131,9 @@
 }
 
 .approach-content {
-    max-width: 900px;
-    margin: 0 auto 3rem;
-    text-align: center;
+    max-width: 1200px;
+    /* margin: 0 auto 3rem; */
+    text-align: left;
 }
 
 .approach-content h3 {
